202211012247: Added a Discounts type.
202211021034: Flip image for failed login.
202211021610: Added ability to go through recurring payments one by one.
202211042107: Removed CSV write function and added a history transaction wipe to recalculate summary for transactions from the past.
202211042219: Added Cash as an account.
202211042231: Recurring transactions until cancelled.
202211042311: Added Refund and Employment type. Removed Income type.
202211050020: Write balance to a daily JSON.
202211052307: Subtract refunds and discounts from Group totals.
202211102016: Fixed date and time for consecutive transactions.
202211102017: Disable parallel dashboard launch.
202211241450: Added separate subroutine for writePath check. Fails when attached to location subroutine
202212121207: Fixed bug in disappearing connections.
202304032220: Testing new type lists for transactions screen
202304032327: .
202304041459: Write transactionsLists to folder
202304041503: Removing .json from list keys
202304041505: .
202304041507: .
202304041745: .
202304042203: .
202304042215: .
202304042217: .
202304042221: Delete trsansactionsList before creating a new list
202304042229: .
202304042241: .
202304042243: .
202304042250: Minify the html and remove some double quotes in the header
202304042254: .
202304042257: Removed \n and \t from typelists
202304042304: .
202304042308: .
202304042313: .
202304042332: .
202304042334: The space before xmlEncode!!!
202304042337: Surround variable with quotation marks
202304042340: .
202304042359: .
202304050030: .
202304050034: .
202304050038: .
202304050047: .
202304050049: .
202304050053: .
202304050055: .
202304050941: Removed ;xmlEncode from variables in transaction screen
202304052208: Added disabled line separator to typeLists
202304052211: Escaped single quotes inside html variables
202304052221: Removed distinct function in typeLists as it filters multiple disabled items
202304052224: Testing img src to icons in storage