@@ -134,12 +134,12 @@
                                         <div class='accountFrom'><select name='accountFrom' id='accountFrom' size='1'
                                                         style='text-align:right' required>
                                                         <option value='Revolut Current' selected><img
-                                                                        sr='file:///storage/emulated/0/Process/4a Transactions/icons/revolut-250x250.png'>Revolut
+                                                                        sr='{img;storage/emulated/0/Process/4a Transactions/icons/revolut-250x250.png}'>
+                                                                Revolut
                                                                 Current
                                                         </option>{transactionLists["accounts"]}
-                                                </select></div>&nbsp;|&nbsp; <div class='accountTo'><select
-                                                        name='accountTo' id='accountTo' size='1' style='text-align:left'
-                                                        required>
+                                                </select></div>|<div class='accountTo'><select name='accountTo'
+                                                        id='accountTo' size='1' style='text-align:left' required>
                                                         <option value='Expenses' selected>Expenses</option>
                                                         {transactionLists["accounts"]}
                                                 </select></div>
