@@ -63,3 +63,4 @@
 202304052211: Escaped single quotes inside html variables
 202304052221: Removed distinct function in typeLists as it filters multiple disabled items
 202304052224: Testing img src to icons in storage
+202304052234: Testing using fileUri for displaying images
